# svscraft

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
share/: CMakeLists.txt
share/translations/: svscraft_en_US.ts  svscraft_ja_JP.ts  svscraft_zh_CN.ts  svscraft_zh_HK.ts  svscraft_zh_TW.ts
src/: CMakeLists.txt  SVSCraftConfig.cmake.in  svscraftConfig.cmake.in
src/core/: CMakeLists.txt  SVSCraftCoreGlobal.h  SVSCraftNamespace.h  svscraftcoreglobal.h
src/core/time/: LongTime.cpp  LongTime.h  MusicTime.cpp  MusicTime.h  MusicTimeSignature.cpp  MusicTimeSignature.h  MusicTime_p.h  MusicTimeline.cpp  MusicTimeline.h  MusicTimeline_p.h  longtime.cpp  longtime.h  musictime.cpp  musictime.h  musictime_p.h  musictimeline.cpp  musictimeline.h  musictimeline_p.h  musictimesignature.cpp  musictimesignature.h
src/core/tools/: AnchoredCurve.cpp  AnchoredCurve.h  AnchoredCurve_p.h  DecibelLinearizer.cpp  DecibelLinearizer.h  MusicMode.cpp  MusicMode.h  MusicModeInfo.cpp  MusicModeInfo.h  MusicPitch.cpp  MusicPitch.h  Semver.cpp  Semver.h  Semver_p.h  WaveformMipmap.cpp  WaveformMipmap.h  WaveformMipmap_p.h  decibellinearizer.cpp  decibellinearizer.h  musicmode.cpp  musicmode.h  musicnote.cpp  musicnote.h  musicpitch.cpp  musicpitch.h
src/fluentsystemicons/: CMakeLists.txt  FluentSystemIcons.cpp  FluentSystemIcons.h  FluentSystemIconsImageProvider.cpp  FluentSystemIconsImageProvider.h  SVSCraftFluentSystemIconsGlobal.h  iconmanifest_filled.cpp  iconmanifest_p.h  iconmanifest_regular.cpp  iconmanifest_rtl.cpp
src/fluentsystemicons/assets/: rtl.json
src/gui/: CMakeLists.txt  DesktopServices.cpp  DesktopServices.h  SVSCraftGuiGlobal.h  svscraftguiglobal.h
src/gui/color/: ColorBlender.cpp  ColorBlender.h  ColorChange.cpp  ColorChange.h  ColorUtils.cpp  ColorUtils.h  Eyedropper.cpp  Eyedropper.h  Eyedropper_p.h  colorblender.cpp  colorblender.h  colorchange.cpp  colorchange.h
src/gui/validator/: LongTimeValidator.cpp  LongTimeValidator.h  MusicPitchValidator.cpp  MusicPitchValidator.h  MusicTimeOffsetValidator.cpp  MusicTimeOffsetValidator.h  MusicTimeOffsetValidator_p.h  MusicTimeValidator.cpp  MusicTimeValidator.h  MusicTimeValidator_p.h  longtimevalidator.cpp  longtimevalidator.h  musicpitchvalidator.cpp  musicpitchvalidator.h
src/network/: CMakeLists.txt  DownloadSession.cpp  DownloadSession.h  DownloadSession_p.h  SVSCraftNetworkGlobal.h
src/qml/: CMakeLists.txt  EyedropperForeign.cpp  EyedropperForeign_p.h  MusicTimelineForeign.cpp  MusicTimelineForeign_p.h  SVSCraftForeign.cpp  SVSCraftForeign_p.h  SVSCraftQmlGlobal.h  SVSCraftValueTypes.cpp  SVSCraftValueTypes_p.h  SVSQmlNamespace.cpp  SVSQmlNamespace_p.h  TextMatcher.cpp  TextMatcherItem.cpp  TextMatcherItem_p.h  TextMatcher_p.h  musictimelineforeign.cpp  musictimelineforeign_p.h  svscraftqmlglobal.h  svscraftvaluetypes.cpp  svscraftvaluetypes_p.h  svsqmlnamespace.cpp  svsqmlnamespace_p.h
src/quick/: AttachedPropertyPropagator.cpp  AttachedPropertyPropagator.h  AttachedPropertyPropagatorProperties.cpp  AttachedPropertyPropagatorProperties.h  CMakeLists.txt  ColorUtilsForeign.cpp  ColorUtilsForeign_p.h  CursorBinding.cpp  CursorBinding_p.h  CursorBinding_p_p.h  DescriptiveAction.cpp  DescriptiveAction_p.h  DescriptiveAction_p_p.h  DescriptiveText.cpp  DescriptiveText_p.h  DescriptiveText_p_p.h  Docking.cpp  Docking_p.h  Docking_p_p.h  MessageBox.cpp  MessageBox.h  MessageBox_p.h  SVSCraftQuickGlobal.h  StatusTextContext.cpp  StatusTextContext.h  StatusTextContext_p.h  Theme.cpp  Theme.h  Theme_p.h  ThemedItem.cpp  ThemedItem_p.h  ThemedItem_p_p.h  WaveformThumbnail.cpp  WaveformThumbnail.h  WaveformThumbnail_p.h  WaveformThumbnail_p_p.h  colorchange.cpp  colorchange.h  descriptivetext.cpp  descriptivetext_p.h  (+17 more)
src/quick/qml/: Button.qml  CheckBox.qml  ComboBox.qml  GroupBox.qml  Label.qml  Menu.qml  MenuAction.qml  MenuBar.qml  MenuBarItem.qml  MenuItem.qml  MessageBoxDialog.qml  Popup.qml  RadioButton.qml  ScrollBar.qml  ScrollIndicator.qml  (+7 more)
src/quickimpl/: ActionToolTipHelper.cpp  ActionToolTipHelper_p.h  AttachedHelper.cpp  AttachedHelper_p.h  CMakeLists.txt  CommandPaletteHelper.cpp  CommandPaletteHelper_p.h  CommandPaletteProxyModel.cpp  CommandPaletteProxyModel_p.h  DockingImpl.cpp  DockingImpl_p.h  GlobalHelper.cpp  GlobalHelper_p.h  QQuickIconForeign.cpp  QQuickIconForeign_p.h  SVSCraftQuickImplGlobal.h  StatusText.cpp  StatusText_p.h  StatusText_p_p.h  commandpalettehelper.cpp  commandpalettehelper_p.h  dockingimpl.cpp  dockingimpl_p.h  globalhelper.cpp  globalhelper_p.h  statustext.cpp  statustext_p.h  statustext_p_p.h  svscraftquickimplglobal.h
src/widgets/: CMakeLists.txt  SVSCraftWidgetsNamespace.h  cksvswidgetsnamespace.h  svscraftwidgetsglobal.h  svscraftwidgetsnamespace.h
tests/: CMakeLists.txt
tests/AnchoredCurve/: CMakeLists.txt  main.cpp
tests/DockingView/: CMakeLists.txt  main.cpp  main.qml
tests/DownloadSession/: CMakeLists.txt  main.cpp
tests/EditLabel/: CMakeLists.txt  main.cpp
tests/LevelMeter/: CMakeLists.txt  main.cpp
tests/MessageBoxDialog/: CMakeLists.txt  main.cpp  main.qml
tests/MusicNote/: CMakeLists.txt  main.cpp
tests/MusicPitch/: CMakeLists.txt  main.cpp
tests/SeekBar/: CMakeLists.txt  main.cpp
tests/SwitchButton/: CMakeLists.txt  main.cpp
tests/TimeSpinBox/: CMakeLists.txt  main.cpp
tests/UIComponents/: CMakeLists.txt  main.cpp  main.qml
tests/Validators/: CMakeLists.txt  main.cpp
tests/WaveformThumbnail/: CMakeLists.txt  main.cpp  main.qml
(+175 files in other folders)
